# markov

./: .env.example  .gitignore  config.yaml  pyproject.toml  render.yaml  supabase_schema.sql
darwin/: analysis.py  config.py  grid.py  orchestrator.py  prompts.py  server.py
darwin/api/: app.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/replay/: page.tsx
dashboard/src/components/: AgentBadge.tsx  DeceptionChart.tsx  GameGrid.tsx  KillTimeline.tsx  OptimalMovesPanel.tsx  RelationshipWeb.tsx  RoundControls.tsx  RunControls.tsx  ThoughtStream.tsx
dashboard/src/components/analysis/: AnalysisWorkspace.tsx
dashboard/src/components/layout/: LiveWorkspace.tsx
dashboard/src/hooks/: useGameController.ts  useGameState.ts  useWebSocket.ts
dashboard/src/lib/: api.ts  colors.ts  moveAnalysis.ts  types.ts
markov/: agent.py  communication.py  config.py  family.py  grid.py  highlights.py  llm.py  logger.py  modal_app.py  orchestrator.py  persistence.py  prompts.py  resolver.py  series.py  server.py
markov/api/: __init__.py  app.py  game_runner.py  schemas.py
scripts/: assemble_demo_video.py  batch_games.py  capture_demo_video.py  demo_video.py  finetune_classifier.py  run.py  run_api.py  run_llm.py  run_modal.py  run_series.py
tests/: test_communication.py  test_grid.py  test_llm.py  test_persistence.py  test_resolver.py  test_series.py
